--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ main {
 
 .category-card {
   position: relative;
-  border: 1px solid #ddd;
+  border: 1px solid white;
   border-radius: 10px;
   overflow: hidden;
   transition: transform 0.2s;
