--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@ main {
 }
 
 .meal-card {
-  border: 1px solid #ccc;
+  border: 1px solid white;
   border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
